# Buch-AI-Server

./: .gitignore  .pre-commit-config.yaml  Dockerfile  Dockerfile.base  Dockerfile.server  README.md  config.py  main.py  pyproject.toml  setup.py
.github/workflows/: build-deploy.yaml  build-docker.yaml  deploy-gcloud-run.yaml  deploy-google-cloud-run.yaml  deploy-terraform.yaml  terraform.yaml
app/: main.py
app/mcp/: README.md  config.json  config_generator.py  main.py  test.py
app/models/: __init__.py  cost_centre.py  creations.py  credits.py  firestore.py  geolocation.py  llm.py  payment.py  payments.py  shared.py  tasks.py  users.py
app/models/llm/: __init__.py  common.py  hugging_face.py  validation.py  vertex_ai.py
app/routers/: creation_routes.py  database_routes.py  image_routes.py  llm_routes.py  me_routes.py
app/scripts/gcloud/bigquery/: common.py  creations_profiles_init.py  tasks_video_generator_init.py  users_auth_init.py  users_profiles_init.py
app/scripts/tasks/: README.md  video_generator_demo.py
app/server/: main.py
app/server/routers/: auth_routes.py  creation_routes.py  database_routes.py  image_routes.py  me_routes.py  payment_routes.py
app/services/: cost_centre.py  firestore.py  firestore_service.py  geolocation.py
app/services/image/: common.py  pollinations_ai.py  vertex_ai.py
app/services/llm/: common.py  hugging_face.py  vertex_ai.py
app/services/payments/: credit_manager.py  stripe.py  subscription_manager.py
app/tasks/video_generator/: Dockerfile  Dockerfile.video-generator  README.md  dubber.py  imagemagick.py  main.py  video_slide.py
assets/d/video_generator/creation_1/1/: 1.txt  2.txt  3.txt
assets/d/video_generator/creation_1/2/: 1.txt  3.txt
buch_ai_server.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
docs/: CURSOR_1_FIRESTORE_MIGRATION_GUIDE.md  CURSOR_4_CREDIT_SYSTEM_UPDATE.md  MIGRATION_SUMMARY.md  MODEL_UNIFICATION.md  STRIPE.md  STRIPE_SETUP.md
models/: llm_config.py  video_generator.py
routers/: auth_routes.py  database_routes.py  image_routes.py  llm_routes.py  me_routes.py
scripts/: gcloud_bigquery_init.py
scripts/gcloud/bigquery/: __init__.py  creations_profiles_init.py  tasks_video_generator_init.py  users_auth_init.py  users_profiles_init.py
scripts/models/: video_generator_demo.py
scripts/tasks/: README.md  video_generator_demo.py
tasks/video_generator/: Dockerfile  main.py  policy.xml
terraform/: firestore.rules  firestore.tf  main.tf  p.tfvars.template  provider.tf  variables.tf
(+9 files in other folders)
