[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "buch-ai-server"
version = "0.1.0"
description = "A FastAPI application."
authors = [
    { name = "Your Name", email = "your.email@example.com" }
]
requires-python = ">= 3.12"
dependencies = [
    "fastapi>=0.95.0",
    "fastapi[standard]>=0.95.0",
    "uvicorn>=0.22.0",
    "google-cloud-bigquery>=3.11.0",
    "huggingface-hub>=0.29.2",
    "python-dotenv>=1.0.1",
    "aiohttp>=3.11.13",
    "bcrypt==4.0.1",
    "passlib==1.7.4",
    "pydantic>=2.10.6",
    "pyjwt>=2.10.1",
    "httpx>=0.28.1",
    "google-cloud-aiplatform>=1.86.0",
]

[dependency-groups]
dev = [
    "pre-commit>=4.2.0",
    "pytest>=7.2.0",
    "ruff>=0.11.1",
]
